# nexus_encounter_journal

./: CMakeLists.txt  Dockerfile
include/: gui.h  shared.h
include/data/: encounters.h
include/nexus/: Nexus.h
src/: entry.cpp  gui.cpp  resource.h  resource.rc  shared.cpp
src/imgui/: CMakeLists.txt
